--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   app:
     build:
@@ -14,7 +12,6 @@ services:
     depends_on:
       - db
 
-
   nginx:
     image: nginx
     volumes:
@@ -26,13 +23,12 @@ services:
     depends_on: 
       - app
 
-
   db:
     container_name: pg_db
     image: postgres:14-alpine
     environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: root
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: my_db
     ports:
       - "5432:5432"
